# biome

./: Cargo.toml  pnpm-lock.yaml
crates/biome_cli/: Cargo.toml
crates/biome_cli/src/commands/: check.rs  lint.rs  mod.rs
crates/biome_cli/src/execute/: process_file.rs
crates/biome_cli/tests/cases/: monorepo.rs
crates/biome_configuration/src/: lib.rs
crates/biome_grit_patterns/: Cargo.toml
crates/biome_json_factory/src/: make.rs
crates/biome_rowan/: Cargo.toml
crates/biome_rowan/src/ast/: batch.rs
crates/biome_serialize/: Cargo.toml
crates/biome_serialize/src/: diagnostics.rs  lib.rs
crates/biome_serialize/src/json/: impls.rs  mod.rs
crates/biome_service/src/: configuration.rs
crates/biome_text_edit/src/: lib.rs
website/src/content/blog/: roadmap-2024.md
website/src/content/docs/internals/: changelog.mdx
xtask/coverage/: Cargo.toml
