[package]
name = "biome_serialize"
version = "0.4.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

biome_json_syntax = { workspace = true }
bitflags =  { workspace = true}
biome_diagnostics = { workspace = true}
serde = { workspace = true }
biome_console = { workspace = true}
biome_json_factory = { workspace = true }
biome_rowan = { workspace = true }

[lints]
workspace = true
